pkg/conformance/testdata/tracebacks/ctx.txt
Traceback (most recent call last):
  File "/private/tmp/tbsamples/ctx.py", line 2, in <module>
    {}["k"]
    ~~^^^^^
KeyError: 'k'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/private/tmp/tbsamples/ctx.py", line 4, in <module>
    print(1 + None)
          ~~^~~~~~
TypeError: unsupported operand type(s) for +: 'int' and 'NoneType'
